; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_test_online_clone__bitbucket_uses_creds_in_url.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_test_online_clone__bitbucket_uses_creds_in_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i8*, i8* }
%struct.TYPE_9__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_8__*, i32 }

@.str = private unnamed_addr constant [8 x i8] c"libgit2\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"wrong\00", align 1
@__const.test_online_clone__bitbucket_uses_creds_in_url.user_pass = private unnamed_addr constant %struct.TYPE_8__ { i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i32 0, i32 0) }, align 8
@git_cred_userpass = common dso_local global i32 0, align 4
@g_options = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@g_repo = common dso_local global i32* null, align 8
@BB_REPO_URL_WITH_PASS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"./foo\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_clone__bitbucket_uses_creds_in_url() #0 {
  %1 = alloca %struct.TYPE_8__, align 8
  %2 = bitcast %struct.TYPE_8__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %2, i8* align 8 bitcast (%struct.TYPE_8__* @__const.test_online_clone__bitbucket_uses_creds_in_url.user_pass to i8*), i64 16, i1 false)
  %3 = load i32, i32* @git_cred_userpass, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @g_options, i32 0, i32 0, i32 0, i32 1), align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @g_options, i32 0, i32 0, i32 0, i32 0), align 8
  %4 = load i32, i32* @BB_REPO_URL_WITH_PASS, align 4
  %5 = call i32 @git_clone(i32** @g_repo, i32 %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), %struct.TYPE_9__* @g_options)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** @g_repo, align 8
  %8 = call i32 @git_repository_free(i32* %7)
  store i32* null, i32** @g_repo, align 8
  %9 = call i32 @cl_fixture_cleanup(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_clone(i32**, i32, i8*, %struct.TYPE_9__*) #2

declare dso_local i32 @git_repository_free(i32*) #2

declare dso_local i32 @cl_fixture_cleanup(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
